# notes

./: .gitignore  .prettierrc  Cargo.toml  README.md  docker-compose.yml  flake.nix  nx.json  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
.cargo/: config.toml
.nx/cache/: file-map.json  lockfile.hash  nx_files.nxt  parsed-lock-file.json  project-graph.json  run.json
.nx/installation/: package-lock.json  package.json
apps/api/: .env  .env.example  Cargo.toml  package.json  project.json
apps/api/prisma/: schema.prisma
apps/api/prisma/migrations/20211019143442_init/: migration.sql
apps/api/prisma/migrations/20220109081932_/: migration.sql
apps/api/src/: app.module.ts  main.rs  prisma.rs  prisma.service.ts  schema.gql
apps/api/src/auth/: auth.module.ts
apps/api/src/emoji/: emoji.module.ts
apps/api/src/routes/: mod.rs
apps/api/src/routes/users/: get.rs  mod.rs  users.rs
apps/api/src/user/pages/: pages.module.ts  pages.resolver.ts
apps/api/src/user/pages/models/: content.model.ts  pages.model.ts
apps/api/src/user/templates/: templates.resolver.ts  templates.service.ts
apps/api/src/user/templates/dto/: create-template.dto.ts
apps/api/src/user/templates/models/: index.ts  templates.models.ts
apps/api/users/: Cargo.toml  project.json
apps/api/users/prisma/: schema.prisma
apps/api/users/src/: main.rs
apps/desktop/: package.json  vite.config.ts
apps/web/: project.json  tsconfig.app.json  tsconfig.json  vite.config.ts
libs/@rspc-client/: project.json
libs/prisma-cli/: Cargo.toml
libs/ui/: project.json  (+3 more)
src/: root.tsx
(+41 files in other folders)
