[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }
specta = "1.0.5"
rspc = "0.2.0"
rspc-axum = { version = "0.1.1", features = ["ws"] }
axum = "0.7.0"
tower-http = { version = "0.5.0", features = ["cors"] }
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.11" }
serde = "1.0.197"
